--- a/mealShake/Info.plist
+++ b/mealShake/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Autoriser</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Autoriser</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Autoriser la localisation</string>
 	<key>CFBundleDevelopmentRegion</key>
